--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <title>ChartJS demo, April 26, 2016</title>
     <link rel="stylesheet" href="style.css">
+    <script src="chart.js"></script>
   </head>
   <body>
     <h1>What is our favorite Prince song?</h1>
     <ul id="songs"></ul>
+    <canvas id="song-chart" width="100px" height="100px"></canvas>
     <script src="app.js"></script>
   </body>
 </html>
