--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <body>
     <h1>What is our favorite Prince song?</h1>
     <ul id="songs"></ul>
-    <canvas id="song-chart" width="100px" height="100px"></canvas>
+
+    <canvas id="song-chart" width="500" height="500"></canvas>
+    
     <script src="app.js"></script>
   </body>
 </html>
