--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   </head>
   <body>
     <h1>What is our favorite Prince song?</h1>
+    <button id="funky">Click here to find out!</button>
     <ul id="songs"></ul>
 
     <canvas id="song-chart" width="500" height="500"></canvas>
-    
+
     <script src="app.js"></script>
   </body>
 </html>
