--- a/index.html
+++ b/index.html
@@ -5,12 +5,25 @@
     <link rel="stylesheet" href="style.css">
     <script src="chart.js"></script>
   </head>
-  <body>
-    <h1>What is our favorite Prince song?</h1>
-    <button id="funky">Click here to find out!</button>
-    <ul id="songs"></ul>
 
-    <canvas id="song-chart" width="500" height="500"></canvas>
+  <body>
+
+    <h1>What is our favorite Prince song?</h1>
+    <button id="draw-chart">Click here to see a chart!</button>
+    <button id="list-button">Or a lame old list</button>
+
+    <div id="voting">
+      <h2>Click to vote on your favorite of these songs:</h2>
+      <button id="purplerain">Purple Rain</button>
+      <button id="letswork">Let's Work</button>
+      <button id="dmsr">DMSR</button>
+      <button id="mountains">Mountains</button>
+      <button id="starfish">Starfish and Coffee</button>
+    </div>
+
+    <ul id="funky-list"></ul>
+
+    <canvas id="funky-chart" width="400" height="400"></canvas>
 
     <script src="app.js"></script>
   </body>
