--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+    <button id="lazyass">CLEAR LS</button>
 
     <h1>What is our favorite Prince song?</h1>
     <button id="draw-chart">Click here to see a chart!</button>
